--- a/office/KAEC_BIK/HTML/kaec-bik/assets/css/custom-responsive.css
+++ b/office/KAEC_BIK/HTML/kaec-bik/assets/css/custom-responsive.css
@@ -6,12 +6,21 @@
     .container{ max-width: 1280px; }
     /* common structure css ended */
 
+    /* home community section css start */
+    .community-iconic-row{ justify-content: space-between; }
+    
+    .community-iconic-row > div[class*='col-']{ width:auto; max-width: inherit; flex: inherit; }
+    /* home community section css ended */
+
+}
+
+@media screen and (min-width:1025px) {
     /* header desktop css start */
     header .row.header-row .menu-col{ width:auto; }
 
     header .row.header-row .contact-info-col{ width:auto; }
 
-    header .row.header-row{ justify-content: space-between; align-items: center; }
+    header .row.header-row{ justify-content: space-between; align-items: center; flex-wrap: nowrap; }
 
     header .row.header-row > div[class*='col-']{ width:auto; max-width: inherit; flex: inherit; }
 
@@ -27,8 +36,8 @@
 }
 
 /* window size greater than 1024px */
-@media screen and (min-width:1024px) {
-    
+@media screen and (min-width:1025px) {
+
     
 }
 
@@ -40,6 +49,82 @@
 
 
 /* responsive css start */
+@media screen and (max-width:1499px) {
+
+    /* header css start */
+    header { padding: 18px 0px; }
+
+    .header-main-logo img { max-width: 100px; }
+
+    .Sticky header .header-main-logo img { max-width: 80px; }
+
+    .header-iconic-info { font-size: 14px; }
+
+    .header-iconic-info img { max-width: 15px; margin-right: 6px; }
+
+    .header-iconic-info li { margin: 0px 5px; }
+    /* header css ended */
+
+    /* common css start */
+    .heading-xl { font-size: 40px; line-height: 45px; }
+
+    .heading-lgmd { font-size: 24px; line-height: 28px; }
+
+    .heading-lg { font-size: 26px; line-height: 20px; }
+
+    p { font-size: 14px; line-height: 20px; }
+
+    .btn.btn-primary, .btn.btn-success { padding: 14px 10px; font-size: 14px; }
+    /* common css ended */
+
+
+    /* home search cssm start */
+    .propertyType .select-styled, .communitiesType .select-styled,
+    .minPriceType .select-styled, .maxPriceType .select-styled { background-position: 10px 12px; background-size: 18px; }
+
+    .search-filter-section .btn.btn-primary, .search-filter-section .btn.btn-success{ min-width:100px; font-size:12px; }
+    /* home search css ended */
+
+
+    /* home communities section css start */
+    .home-communities-sectn { padding: 25px 0px 45px; }
+
+    .home-communities-sectn .section-heading { margin-bottom: 30px; }
+
+    .home-communities-sectn .tab_wrapper.left_side > ul {height: 350px; }
+
+    .home-communities-sectn .tab_wrapper.left_side > ul li { min-height: 70px; font-size: 15px; }
+
+    .home-communities-sectn .tab_wrapper.left_side > ul li img { max-width: 28px; margin-right: 10px; }
+
+    .iconic-name-list h3 { font-size: 15px; }
+    /* home communities section css ended */
+
+
+    /* home city benefit section css start */
+    .home-city-benefit-sectn { padding: 30px 0px 30px; }
+
+    .home-city-benefit-sectn .section-heading { margin-bottom: 25px; }
+    /* home city benefit section css ended */
+
+
+    /* home property css start */
+    .home-property-sectn { padding: 30px 0px 20px; }
+
+    .home-property-sectn .section-heading { margin-bottom: 30px; }
+    /* home property css ended */
+
+
+    /* footer css start */
+    .footer-logo { max-width: 100px; }
+
+    .copyright { font-size: 14px; }
+    /* footer css ended */
+
+
+
+}
+
 @media screen and (max-width:1399px) {
 
 
@@ -55,8 +140,65 @@
     
 }
 
-
 @media screen and (max-width:991px) {
+
+    /* header css start */
+    body{ padding-top: 0px !important; }
+
+    .Sticky .StickyElementAfterScroll{ position: relative; }
+    /* header css ended */
+
+
+    /* common css start */
+    .heading-xl { font-size: 25px; line-height: 30px; }
+
+    .heading-lg { font-size: 20px; line-height: 20px; }
+
+    .heading-lgmd { font-size: 18px; line-height: 24px; }
+    /* common css ended */
+
+
+    /* home city css start */
+    .home-city-benefit-sectn .section-heading { margin-bottom: 10px; }
+    /* home city css ended */
+
+
+    /* community css start */
+    .community-tab-main-heading { margin-bottom: 20px; }
+
+    .home-communities-sectn .tab_wrapper.left_side .content_wrapper { width: 100%; }
+
+    .home-communities-sectn .tab_wrapper .content_wrapper .accordian_header{ border:none; background: #5da91e; color:#fff; margin-bottom:2px; font-size: 14px; }
+
+    .home-communities-sectn .tab_wrapper .content_wrapper .accordian_header .arrow{ background: transparent; }
+
+    .home-communities-sectn .tab_wrapper .content_wrapper .accordian_header.active:after{ display: none; }
+
+    .home-communities-sectn .tab_wrapper .content_wrapper .accordian_header.active .arrow,
+    .home-communities-sectn .tab_wrapper .content_wrapper .accordian_header .arrow{ border-color:#fff; }
+
+    .home-communities-sectn .tab_wrapper .content_wrapper .tab_content{ padding:20px; }
+
+    .action-info-row{ text-align: center; }
+    /* community css ended */
+
+
+    /* home search section css start */
+    .search-filter-wrap-area{ flex-flow: column; }
+
+    .search-filter-col{ width:100%; }
+
+    .search-filter-col.action-col { justify-content: space-between; flex-wrap: wrap; flex-flow: column; }
+
+    .search-filter-section .btn.btn-primary, .search-filter-section .btn.btn-success{ margin: 5px 0px 0px; }
+    /* home search section css ended */
+
+
+    /* footer css start */
+    footer { padding: 10px 0px; }
+
+    .footer-row { align-items: center; text-align: center; }
+    /* footer css ended */
 
 
 }
@@ -64,12 +206,21 @@
 
 @media screen and (max-width:768px) {
 
+    /* home community section css start */
+    .home-communities-sectn .tab_wrapper{ display: inline-block; }
+    /* home community section css ended */
+
     
 }
 
 
 @media screen and (max-width:767px) {
 
+    /* header css start */
+    .header-iconic-info:last-child{ display: none; }
+
+    .contact-info-col{ text-align: right; }
+    /* header css ended */
 
 }
 
