--- a/office/KAEC_BIK/HTML/kaec-bik/assets/css/header-menu.css
+++ b/office/KAEC_BIK/HTML/kaec-bik/assets/css/header-menu.css
@@ -1,10 +1,10 @@
 .header-main-menu{ padding: 0px; margin:0px; font-size:18px; }
 
-.header-main-menu ul{ position: relative; transition: all ease 0.4s; -webkit-transition: all ease 0.4s; }
+.header-main-menu ul{ position: relative; transition: all ease 0.6s; -webkit-transition: all ease 0.6s; }
 
-.header-main-menu li{ display:inline-block; position: relative; }
+.header-main-menu li{ display:inline-block; position: relative;transition: all ease 0.6s; -webkit-transition: all ease 0.6s; }
 
-.header-main-menu li a{ display: inline-block; padding: 10px 0px; }
+.header-main-menu li a{ display: inline-block; padding: 10px 0px;transition: all ease 0.6s; -webkit-transition: all ease 0.6s; }
 
 .header-main-menu li, .header-main-menu li a{ color:#3e3e3e; }
 
@@ -20,11 +20,81 @@
 .header-main-menu > ul > li:hover > a{ border-color:#0a70ff; }
 
 /* 2nd lavel */
-.header-main-menu ul ul{ position: absolute; left: 0px; top:100%; }
+.header-main-menu ul ul{ min-width:160px; position: absolute; left: 0px; top:200%;  background: #fff; box-shadow: #e6e6e6 0px 0px 10px; -webkit-box-shadow: #e6e6e6 0px 0px 10px; }
 
 .header-main-menu ul ul li{ display: block; }
 
-.header-main-menu ul ul li a{ display: block; }
+.header-main-menu ul ul li a{ display: block; padding: 10px; color:#3e3e3e; }
+
+.header-main-menu ul ul li:hover > a{ background: #f0f0f0; color:#3f3f3f; }
 
 /* 3rd lavel */
-.header-main-menu ul ul ul{ position: absolute; left: 100%; top:0%; }
+.header-main-menu ul ul ul{ position: absolute; left: 100%; }
+
+
+/* responsive css start */
+
+@media screen and (max-width:1199px) {
+
+    .header-main-menu { font-size: 14px; }
+
+}
+
+@media screen and (min-width:992px) {
+
+    .header-main-menu ul ul{ visibility: hidden; opacity: 0; }
+
+    .header-main-menu ul li:hover > ul{ top:100%; visibility: visible; opacity: 1; }
+
+    .header-main-menu ul ul li:hover ul{ top:0%; }
+    
+}
+
+
+@media screen and (max-width:991px) {
+
+    .menu-col{ position: inherit; }
+
+    .mobile-navbar{ display: inline-block; }
+
+    .header-main-menu{ float:left; }
+
+    .header-main-menu .burgermenu-icon{ width: 32px; height: 30px; position: relative; float: right; background: #0a70ff; margin-top: 5px; color:#fff; }
+
+    .header-main-menu .burgermenu-icon:after{ content:''; position: absolute; top:11px; left:50%;width:20px; height:10px; border-width:3px 0px 3px 0px; border-style: solid; border-color:#fff; transform: translate(-50%, -50%); transition: all ease 0.3s; -webkit-transition: all ease 0.3s;  }
+
+    .header-main-menu .burgermenu-icon:before{ content:''; position: absolute; top:20px; width:20px; height:3px; background: #fff; left:50%; transform: translateX(-50%); transition: all ease 0.3s; -webkit-transition: all ease 0.3s;  }
+
+    .burgermenu-icon.opened:after{ height:0px; background: #fff; border-width:2px 0px 1px 0px; left:50%; top:50%; transform: translate(-50%,-50%) rotate(45deg); }
+
+    .burgermenu-icon.opened:before{ height:3px; background: #fff; left:50%; top:50%; transform: translate(-50%,-50%) rotate(-45deg); }
+
+    .header-main-menu .head-menulist{ width:95%; left:50%; transform: translateX(-50%); position: absolute; background: #fff; margin-top:25px; overflow: hidden; box-shadow: #e6e6e6 0px 0px 10px; -webkit-box-shadow: #e6e6e6 0px 0px 10px; }
+
+    .header-main-menu ul{ transition: none; }
+
+    .header-main-menu li.current-item > a,
+    .header-main-menu > ul > li > a{ border-width:0px 0px 1px 0px; border-color:#E6E5E9 !important; }
+    .header-main-menu li.current-item > a{ color:#0a70ff; }
+
+    .header-main-menu > ul { margin: 0px 0px; display: none; }
+
+    .header-main-menu > ul > li{ margin: 0px 0px; }
+
+    .header-main-menu ul ul{ display: none; }
+
+    .header-main-menu ul ul, .header-main-menu ul ul ul{ min-width:160px; width:100%; position: relative; left: 0px; top:0;  background: #fff; }
+
+    .header-main-menu ul li{ width:100%; padding:0px; }
+
+    .header-main-menu ul li a{ width:100%; padding:10px; }
+
+    .header-main-menu .sub-dropdown{ width:30px; height:30px; background: url("../images/prev-arrow.png") no-repeat center center; position: absolute; right:5px; top:5px; background-size: 30%; transform: rotate(-180deg); transition: all ease 0.6s; }
+
+    .header-main-menu .sub-dropdown.expanded{ transform: rotate(-90deg); }
+
+    .header-main-menu .sub-dropdown.expanded + a{ background: #f0f0f0; }
+
+}
+
+
