--- a/office/KAEC_BIK/HTML/kaec-bik-dropdown/assets/css/header-menu.css
+++ b/office/KAEC_BIK/HTML/kaec-bik-dropdown/assets/css/header-menu.css
@@ -1,8 +1,8 @@
 .header-main-menu{ padding: 0px; margin:0px; font-size:18px; }
 
-.header-main-menu ul{ position: relative; /*transition: all ease 0.3s; -webkit-transition: all ease 0.3s;*/ }
+.header-main-menu ul{ position: relative; transition: all ease 0.6s; -webkit-transition: all ease 0.6s; }
 
-.header-main-menu li{ display:inline-block; position: relative;transition: all ease 0.3s; -webkit-transition: all ease 0.3s; }
+.header-main-menu li{ display:inline-block; position: relative; transition: all ease 0.3s; -webkit-transition: all ease 0.3s; }
 
 .header-main-menu li a{ display: inline-block; padding: 10px 0px;transition: all ease 0.3s; -webkit-transition: all ease 0.3s; }
 
@@ -24,9 +24,9 @@
 .header-main-menu > ul > li:hover > a{ border-color:transparent; }
 
 /* 2nd lavel */
-.header-main-menu ul ul{ min-width:260px; position: absolute; left: 0px; top:100%;  background: #fff; box-shadow: #e6e6e6 0px 0px 10px; -webkit-box-shadow: #e6e6e6 0px 0px 10px; }
+.header-main-menu ul ul{ min-width:260px; position: absolute; left: 0px; top:130%; /*box-shadow: #e6e6e6 0px 0px 10px; -webkit-box-shadow: #e6e6e6 0px 0px 10px;*/ }
 
-.header-main-menu ul ul li{ display: block; }
+.header-main-menu ul ul li{ display: block; background: #fff;  }
 
 .header-main-menu ul ul li a{ display: block; padding:15px 10px; color:#3e3e3e; text-transform: uppercase; }
 
@@ -41,15 +41,17 @@
 /* mega menu css */
 /* .header-main-menu > ul > li.megamenuList{  } */
 
-.header-main-menu > ul > li.megamenuList > ul{ transform: translateX(-50%); left:50%; display: flex; }
+.header-main-menu > ul > li.megamenuList > ul{ transform: translateX(-50%); left:60%;  }
 
 .header-main-menu > ul > li.megamenuList > ul li{ width:25%; }
 
-.header-main-menu > ul > li.megamenuList > ul li ul{ min-width:100%; width:100%; position: relative; visibility: visible; opacity: 1 !important; display: block !important; top:0; left: 0px; }
+.header-main-menu > ul > li.megamenuList > ul li ul{ min-width:100%; width:100%; position: relative; top:0; left: 0px; }
 
 .header-main-menu > ul > li.megamenuList > ul li ul li{ width:100%; }
 
 .header-main-menu > ul > li.megamenuList > ul li ul li a{ display: block; }
+
+
 
 /* responsive css start */
 
@@ -61,11 +63,26 @@
 
 @media screen and (min-width:992px) {
 
-    /*.header-main-menu ul ul{ visibility: hidden; opacity: 0; display: none; }
+    .header-main-menu ul li{ overflow: hidden; vertical-align: top; }
 
-    .header-main-menu ul li:hover > ul{ top:100%; visibility: visible; opacity: 1; }
+    .header-main-menu ul li:hover{ overflow: visible; }
 
-    .header-main-menu ul ul li:hover ul{ top:0%; }*/
+    .header-main-menu > ul > li > ul{ padding-top: 24px; }
+
+    .Sticky .header-main-menu > ul > li > ul{ padding-top: 12px; }
+
+    .header-main-menu ul ul{ visibility: hidden; opacity: 0; }
+
+    .header-main-menu ul li:hover > ul{ top:100%; visibility: visible; opacity: 1;  }
+
+    .header-main-menu ul ul li:hover ul{ top:0%; }
+
+    .header-main-menu > ul > li.megamenuList:hover ul{ display: block; visibility: visible; opacity: 1; }
+
+    .header-main-menu > ul > li.megamenuList:hover > ul{ display: flex !important; }
+
+    
+    
     
 }
 
@@ -113,6 +130,9 @@
     .header-main-menu .sub-dropdown.expanded{ transform: rotate(-90deg); }
 
     .header-main-menu .sub-dropdown.expanded + a{ background: #f0f0f0; }
+
+
+    .header-main-menu > ul > li.megamenuList > ul li{ width:100%; }
 
 }
 
